stylesheet.less
/*	===============================
	Colour Swatches
	===============================
	"color1": == Background
	"color2": == Contrast colour
	"color3": == Button colour
	"color4": == Title colour
	"color5": == Paragraph colour
	"color6": == Nav text colour
	"color7": == Header BG colour
	=============================== */

/*	===============================
	Font Swatches
	===============================
	"font1":  == Heading 1
	"font2":  == Heading 2
	"font3":  == Heading 3
	"font4":  == Heading 4
	"font5":  == Paragraph
	"font6":  == Navigation Text
	"font7":  == Buttons
	"font8":  == Feature Title
	"font9":  == Feature Subtitle
	"font10": == Logo
	=============================== */

@import "@{templateCommon}/basekit-bootstrap.less";
@import "@{templateLocal}/css/ecommerce.less";
@import "@{templateLocal}/css/widgets.less";

// -----------------------------
// Page Settings
// -----------------------------

// Wrapper
.wrapper {
    width: 90%;
    margin: 0 5%;
    @media only screen and (min-width: 1140px) {
    	width: 960px;
    	margin: 0 auto;
    }
}

ul, li {
	margin: 0;
	color: @color-swatch3;
}

// Blockquote

blockquote {
  background: @color-swatch7;
  border-left: 10px solid hsla(hue(@color-swatch3), saturation(@color-swatch3), lightness(@color-swatch3), 0.7);
  margin: 1.5em 0px;
  padding: 10px 10px 10px 50px;
}
blockquote:before {
  color: @color-swatch5;
  content: open-quote;
  font-size: 4em;
  padding: 1px 0 10px 10px;
}

blockquote p {
  display: inline;
}

// -----------------------------
// Page Content
// -----------------------------
.page-content {

}

// -----------------------------
// Header
// -----------------------------

header.template-header {
	position: absolute;
	top: 0;
	width: 100%;
	padding: 20px 0;
}

// Company Info
.company-info,
.companyname {
	float: left;
	@media @tablet {
		width: 90%;
	}
}

.companyname {
	.clearfix;
	margin-left: 10px;
	max-width: 300px;
}

.default .companyname {
	@media @tablet {
		max-width: 70%;
	}
}

.nav {
	float: right;
	@media @tablet {
		float: none;
	}

}

.widget.logo {
	float: left;
}

.default .template-header,
.widget.feature.bk-tpl-hidden + .template-header {
	position: relative;
	background-color: @color-swatch2;
	margin-bottom: 60px;
	padding: 20px 0 20px 0;

}

// -----------------------------
// Extended Navigation
// -----------------------------

.nav {
	max-width: 620px;
	@media (max-width: 960px) {
		max-width: 100%;
	}
}

.widget .extendednavigation a.pull {
	top: 0px;
	background-image: image('/images/hamburger.svg');
	height: 30px;
	width: 30px;
	margin-top: 4px;

	&:after {
		box-shadow: none;
		background: none;
	}
}

.widget.extendednavigation{
	.clearfix;
	z-index: 999999;
}

.widget .extendednavigation ul {
	@media @tablet {
		background-image: -webkit-gradient( linear, left top, left bottom, from(hsla(hue(@color-swatch2), saturation(@color-swatch2), lightness(@color-swatch2), 0.8)), to(@color-swatch2));
		margin: 20px 0 auto;
		padding: 15px 0 15px 0;
	}
	li {
		border-bottom: none;
		@media @tablet {
			padding: 0px;
		}
		// Nav Links
		a {
			color: hsla(hue(@color-swatch6), saturation(@color-swatch6), lightness(@color-swatch6), 0.7);
			line-height: 40px;
			&:hover {
				color: @font-swatch6-color;
			}
		}
		// Dropdown Menu
		&:hover ul {
			margin: 0;
			width: 100%;
			min-width: 10px;
			background-color: darken(@color-swatch2,10%);
			background-image: none;
		}
		&.folder {
			color: @font-swatch6-color;
			&:hover {
				color: hsla(hue(@color-swatch6), saturation(@color-swatch6), lightness(@color-swatch6), 0.7);
  				background-color: darken(@color-swatch2,10%);

			}
			&:after {
				border: 0;
			}
			span.text {
				color: hsla(hue(@color-swatch6), saturation(@color-swatch6), lightness(@color-swatch6), 0.7);
				line-height: 40px;
			}
			& > .text:after {
				display: inline-block;
                content: "";
               	width: 0;
               	height: 0;
                border: 6px solid transparent;
                border-top-color: hsla(hue(@color-swatch1), saturation(@color-swatch1), lightness(@color-swatch1), 0.7);
                margin-left: 0.4em;
                margin-bottom: -2px;
			}
				@media @tablet {
					& > .text:before {
					display: inline-block;
	                content: "";
	               	width: 0;
	               	height: 0;
	                border: 6px solid transparent;
	                border-top-color: hsla(hue(@color-swatch1), saturation(@color-swatch1), lightness(@color-swatch1), 0.7);
	                margin-right: 0.4em;
	                margin-bottom: -2px;
	            }
	            	& > .text:after {
	            		display: none;
	            }
			}
		}
	}
}

// -----------------------------
// Feature
// -----------------------------

.widget.feature {
	margin-bottom: 60px;
	text-align: center;
    .feature-bgimg,
    .feature-bgimg .content {
    	min-height: 700px;
    	height: auto;
    	background-repeat: no-repeat;
        @media @tablet {
            min-height: 400px;
        }
        @media @mobile {
            min-height: 250px;
        }
        .content {
            h2 {
            	text-shadow: 2px 2px rgba(0,0,0, .2);
            	line-height: 80px;
            	@media @tablet {
            		line-height: 100px;
        		}
        		@media @mobile {
            		line-height: 50px;
        		}
            }
            h3 {
            	@media @mobile {
            		line-height: 37px;
        		}
            }
            .spare {
            	padding: 14em 0 5em;
            	@media @tablet {
		            padding: 10em 0 5em;
		        }
		        @media @mobile {
		            padding: 6em 0 5em;
		        }
            }
        }
    }
}

// -----------------------------
// Footer
// -----------------------------

footer.template-footer {
	padding: 4em 0;
	background-color: @color-swatch4;
	min-height: 150px;
	color: @color-swatch1;

	h2 {
	color: @color-swatch1;
	font-size:bkscale(@font-swatch2-font-size, 0.9);
	padding-bottom: 20px;
	}
}

